<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mfa.carikerjapariwisata.views.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_job"
        android:name="com.mfa.carikerjapariwisata.views.ui.job.JobFragment"
        android:label="@string/title_job"
        tools:layout="@layout/fragment_job" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mfa.carikerjapariwisata.views.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>