<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@color/white"
    tools:context=".views.ui.job.JobFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_18sdp"
                android:text="@string/page_job"
                android:textColor="@color/white"
                android:maxWidth="@dimen/_210sdp"/>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_bookmark"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                app:tint="@color/white" />

        </RelativeLayout>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_text_input_rounded"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:hint="Cari Pekerjaan"
            android:drawableRight="@drawable/ic_search"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_minus30sdp"
        android:background="@drawable/bg_layout_place_detail">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_10sdp">
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_15sdp"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white"
                    android:maxWidth="@dimen/_150sdp"
                    android:layout_toLeftOf="@+id/btCreateJob"
                    android:layout_alignParentLeft="true"
                    android:text="@string/have_job"/>

                <Button
                    android:id="@+id/btCreateJob"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:text="@string/buat_lowongan"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_button_green_soft"/>
            </RelativeLayout>
            
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pekerjaan_terbaru"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black_60"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvJobs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"/>

    </LinearLayout>

</LinearLayout>