<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ui.signup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_40sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_40sdp"
            android:padding="@dimen/_20sdp"
            android:orientation="vertical"
            android:background="@drawable/bg_layout_place_detail">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/bg_fb_layout"
                android:layout_marginTop="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/logo_fb"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_with_facebook"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/bg_google_layout"
                android:layout_marginTop="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/logo_google"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_with_google"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">

                <TextView
                    android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black_40"
                    android:text="Or"
                    android:layout_centerHorizontal="true"/>

                <View
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/black_20"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_toRightOf="@+id/or"/>

                <View
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/black_20"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_toLeftOf="@+id/or"/>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:hint="Email atau telepon"
                android:textColor="@color/black_40"
                style="@style/TextInputLoginRegister"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/black_40"
                android:drawableRight="@drawable/ic_visibility"
                style="@style/TextInputLoginRegister"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textColor="@color/black_40"
                android:drawableRight="@drawable/ic_visibility"
                style="@style/TextInputLoginRegister"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullname"
                android:hint="Fullname"
                android:textColor="@color/black_40"
                style="@style/TextInputLoginRegister"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black_40"
                    android:text="I have read and agree to the Privacy Policy"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/_5sdp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14sdp"
                android:background="@drawable/bg_button_white_border_blue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black_40"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="Already have account? "
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/tvSignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="Sign in "
                    android:layout_centerHorizontal="true"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>