<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.mfa.carikerjapariwisata.views.ui.place_detail.PlaceDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_10"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_230sdp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@android:color/white"
                app:statusBarScrim="@android:color/white"
                android:fitsSystemWindows="true"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                app:titleEnabled="false">


                <ImageView
                    android:id="@+id/ivMainPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_230sdp"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:contentInsetStartWithNavigation="0dp"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                </FrameLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fitsSystemWindows="true"
            android:scrollbars="none"
            android:scrollingCache="true"
            android:layout_marginTop="@dimen/_minus25sdp"
            android:background="@drawable/bg_layout_place_detail"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_20sdp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <com.google.android.material.floatingactionbutton.FloatingActionButton
                                android:id="@+id/fabLike"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:layout_marginBottom="@dimen/_10sdp"
                                app:backgroundTint="@color/white"
                                android:layout_marginRight="@dimen/_8sdp"
                                android:src="@drawable/ic_love_not_active"
                                android:clickable="true"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxWidth="@dimen/_210sdp"
                                android:textSize="@dimen/_16sdp"
                                android:textColor="@color/black_60"/>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_address"
                                    android:layout_marginRight="@dimen/_8sdp"/>

                                <TextView
                                    android:id="@+id/tvCity"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/_12sdp"
                                    android:textColor="@color/black_60"/>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:layout_marginTop="@dimen/_2sdp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_love_active"
                                    android:layout_marginRight="@dimen/_8sdp"/>

                                <TextView
                                    android:id="@+id/tvLikes"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/_12sdp"
                                    android:textColor="@color/black_60"/>

                            </LinearLayout>

                        </LinearLayout>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/galeri"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/black_60"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_75sdp"
                            android:layout_weight="1"
                            app:cardCornerRadius="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp">

                            <ImageView
                                android:id="@+id/ivChild1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:scaleType="fitXY"
                                android:src="@drawable/im_slider1" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_75sdp"
                            android:layout_weight="1"
                            app:cardCornerRadius="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp">

                            <ImageView
                                android:id="@+id/ivChild2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:scaleType="fitXY"
                                android:src="@drawable/im_slider1"/>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_75sdp"
                            android:layout_weight="1"
                            app:cardCornerRadius="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp">

                            <ImageView
                                android:id="@+id/ivChild3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:scaleType="fitXY"
                                android:src="@drawable/im_slider1"/>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/deskripsi"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/black_60"
                        />

                    <TextView
                        android:id="@+id/tvDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_40"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:lineSpacingExtra="@dimen/_1sdp"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/harga_tiket_masuk"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/black_60"
                        />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:lineSpacingExtra="@dimen/_1sdp"
                        android:textColor="@color/black_40"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/jam_buka"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/black_60"
                        />

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:lineSpacingExtra="@dimen/_1sdp"
                        android:textColor="@color/black_40"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
